syntax = "proto3";

package checkout;

message Cart {
    string id = 1;
    repeated Position positions = 2;
}

message Position {
    string productID = 1;
    int64 price = 2;
    string name = 3;
    string smallImageURL = 4;
//    int64 tax = ;

    int64 quantity = 6;
    bool inStock = 7;
    bool moreInStock = 8;
}

message OrderCartResonse {
    bool successful = 1;
}

message ChangeProductQuantityRequest {
    string productID = 1;
    int64 quantity = 2;
}
